--- a/src/Extensions/Banshee.BooScript/Banshee.BooScript.csproj
+++ b/src/Extensions/Banshee.BooScript/Banshee.BooScript.csproj
@@ -21,7 +21,6 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <OutputPath>..\..\..\bin</OutputPath>
-    <WarningLevel>4</WarningLevel>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Windows|AnyCPU' ">
@@ -29,7 +28,6 @@
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <OutputPath>..\..\..\bin\bin</OutputPath>
-    <WarningLevel>4</WarningLevel>
     <Optimize>false</Optimize>
   </PropertyGroup>
   <ItemGroup>
@@ -54,19 +52,15 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Boo.Lang">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\bin\bin\Boo.Lang.dll</HintPath>
     </Reference>
     <Reference Include="Boo.Lang.Compiler">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\bin\bin\Boo.Lang.Compiler.dll</HintPath>
     </Reference>
     <Reference Include="Boo.Lang.Interpreter">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\bin\bin\Boo.Lang.Interpreter.dll</HintPath>
     </Reference>
     <Reference Include="Boo.Lang.Parser">
-      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\bin\bin\Boo.Lang.Parser.dll</HintPath>
     </Reference>
   </ItemGroup>
@@ -91,10 +85,10 @@
   <ProjectExtensions>
     <MonoDevelop>
       <Properties>
-        <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="true" RelativeMakefileName="./Makefile.am">
-          <BuildFilesVar Sync="true" Name="SOURCES" />
+        <MonoDevelop.Autotools.MakefileInfo IntegrationEnabled="True" RelativeMakefileName="./Makefile.am">
+          <BuildFilesVar Sync="True" Name="SOURCES" />
           <DeployFilesVar />
-          <ResourcesVar Sync="true" Name="RESOURCES" />
+          <ResourcesVar Sync="True" Name="RESOURCES" />
           <OthersVar />
           <GacRefVar />
           <AsmRefVar />
