--- a/src/Core/Banshee.ThickClient/Banshee.ThickClient.csproj
+++ b/src/Core/Banshee.ThickClient/Banshee.ThickClient.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +9,6 @@
     <UseParentDirectoryAsNamespace>true</UseParentDirectoryAsNamespace>
     <AssemblyName>Banshee.ThickClient</AssemblyName>
     <SchemaVersion>2.0</SchemaVersion>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <Optimize>true</Optimize>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -77,12 +76,14 @@
     <Reference Include="System.Xml" />
     <Reference Include="Mono.Addins">
       <HintPath>..\..\..\bin\bin\Mono.Addins.dll</HintPath>
+      <Package>mono-addins</Package>
     </Reference>
     <Reference Include="Mono.Addins.Gui">
       <HintPath>..\..\..\bin\bin\Mono.Addins.Gui.dll</HintPath>
     </Reference>
     <Reference Include="Mono.Addins.Setup">
       <HintPath>..\..\..\bin\bin\Mono.Addins.Setup.dll</HintPath>
+      <Package>mono-addins-setup</Package>
     </Reference>
     <Reference Include="dbus-sharp">
       <HintPath>..\..\..\bin\bin\dbus-sharp.dll</HintPath>
@@ -92,6 +93,7 @@
     </Reference>
     <Reference Include="taglib-sharp">
       <HintPath>..\..\..\bin\bin\taglib-sharp.dll</HintPath>
+      <Package>taglib-sharp</Package>
     </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <HintPath>..\..\..\bin\bin\ICSharpCode.SharpZipLib.dll</HintPath>
