--- a/src/Extensions/Banshee.BooScript/Banshee.BooScript.csproj
+++ b/src/Extensions/Banshee.BooScript/Banshee.BooScript.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,7 +9,6 @@
     <UseParentDirectoryAsNamespace>true</UseParentDirectoryAsNamespace>
     <AssemblyName>Banshee.BooScript</AssemblyName>
     <SchemaVersion>2.0</SchemaVersion>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <Optimize>true</Optimize>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -53,15 +52,19 @@
     <Reference Include="System" />
     <Reference Include="Boo.Lang">
       <HintPath>..\..\..\bin\bin\Boo.Lang.dll</HintPath>
+      <Package>boo</Package>
     </Reference>
     <Reference Include="Boo.Lang.Compiler">
       <HintPath>..\..\..\bin\bin\Boo.Lang.Compiler.dll</HintPath>
+      <Package>boo</Package>
     </Reference>
     <Reference Include="Boo.Lang.Interpreter">
       <HintPath>..\..\..\bin\bin\Boo.Lang.Interpreter.dll</HintPath>
+      <Package>boo</Package>
     </Reference>
     <Reference Include="Boo.Lang.Parser">
       <HintPath>..\..\..\bin\bin\Boo.Lang.Parser.dll</HintPath>
+      <Package>boo</Package>
     </Reference>
   </ItemGroup>
   <ItemGroup>
